testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.hir
error SEM3020 testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.sg:4:21 cannot move 'x' while it is shared-borrowed

== HIR ==
module 

fn t() -> nothing (id=1, sym=518) {
  let x: string = "\"hi\""
  let r: &string [&] = (& x): &string
  let y: string = x
}

borrow edges:
  L1037(r) (&) borrows L1036(x) at 0:56-58 scope=S3
events:
  borrow_start L1037(r) -> L1036(x) (&) at 0:56-58 scope=S3 note="B1"
  move L1036(x) at 0:80-81 scope=S3 note="issue=frozen borrow=B1"
  borrow_end L1037(r) -> L1036(x) scope=S3 note="scope_end B1"
move plan:
  L1036(x): MoveForbidden (move blocked by frozen (B1))
  L1037(r): MoveCopy (copy type)
  L1038(y): MoveNeedsDrop (non-copy (drop))

